--- a/akciok.html
+++ b/akciok.html
@@ -26,7 +26,7 @@
     .hamburger div { width: 25px; height: 3px; background: #333; margin: 4px; border-radius: 2px; }
     @media(max-width:768px){
       .menu { display: none; flex-direction: column; background: #fff; position: absolute; top: 60px; right: 20px;
-        box-shadow: 0 4px 10px rgba(0,0,0,.2); border-radius: 10px; }
+        box-shadow: 0 4px 10px rgba(0,0,0,.2); border-radius: 10px; text-align: center; }
       .menu.active { display: flex; }
       .hamburger { display: flex; }
     }
