--- a/index.html
+++ b/index.html
@@ -264,28 +264,41 @@
       background-color: #f7e600;
     }
 
-    /* MODÁL (felugró ablak) */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 999;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.5);
-      justify-content: center;
-      align-items: center;
-    }
+/* MODÁL – teljes képernyős, mobilbarát overlay */
+.modal{
+  display:none;                 /* JS nyitja: display:flex/flex helyett most nem kell */
+  position:fixed;
+  inset:0;
+  width:100svw;                 /* visual viewport szélesség */
+  height:100svh;                /* visual viewport magasság */
+  background:rgba(0,0,0,.5);
+  z-index:999;
+}
 
-    .modal-content {
-      background-color: white;
-      padding: 2em;
-      border-radius: 20px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
+/* A dobozt mindig a képernyő közepére tesszük */
+.modal-content{
+  position:fixed;
+  left:50svw;                   /* visual viewport közepe */
+  top:50svh;
+  transform:translate(-50%,-50%);
+  width:min(92svw, 400px);      /* ne lógjon ki kis kijelzőn sem */
+  max-height:min(92svh, 520px);
+  overflow:auto;                /* ha kicsi a kijelző, belső görgetés */
+  background:#fff;
+  padding:2em;
+  border-radius:20px;
+  text-align:center;
+  box-sizing:border-box;
+}
+
+/* Fallback régebbi böngészőkre, ahol nincs svw/svh */
+@supports not (width: 1svw){
+  .modal{ width:100vw; height:100vh; }
+  .modal-content{
+    left:50vw; top:50vh; transform:translate(-50%,-50%);
+    width:min(92vw, 400px); max-height:min(92vh, 520px);
+  }
+}
 
     input[type="password"] {
       padding: 0.7em;
