--- a/tudnivalok.html
+++ b/tudnivalok.html
@@ -70,6 +70,7 @@
         box-shadow: 0 4px 10px rgba(0,0,0,0.2);
         border-radius: 10px;
         overflow: hidden;
+        text-align: center;
       }
 
       .menu.active {
