--- a/tudnivalok.html
+++ b/tudnivalok.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GYIK – VakációVágyó</title>
+  <title>INformációk</title>
   <link rel="icon" href="kep.png" />
   <style>
     body {
