--- a/sksm.html
+++ b/sksm.html
@@ -215,7 +215,7 @@ border-radius: 8px;
       <h1 id="cim">Sok kicsi sokra megy</h1>
 
       <section aria-labelledby="c1">
-        <h4>Az oldal alján tudsz jelentkezni a játékra! <br> CSATLAKOZZ BÁTRAN!</h4>
+        <h4>Az oldal alján tudsz jelentkezni a játékra! <br><br> CSATLAKOZZ BÁTRAN <br><span style="font-size: 25px;">2025.10.04. 23:59-ig</span>.</h4>
         <h2 id="c1">1. A játék célja</h2>
         <p>A <em>Sok kicsi sokra megy</em> program célja, hogy a család közösen, játékos és motiváló módon gyűjtse össze a nyaraláshoz szükséges összeget. A játék során minden résztvevő napi, heti és végső vállalásokat teljesít, amelyekhez bónuszjóváírás és közös fődíj kapcsolódik. <br> A játék időtartama: <br><strong>2025. október 6. – 2026. május 31.</strong></p>
       </section>
@@ -254,7 +254,7 @@ border-radius: 8px;
 
       <section aria-labelledby="c5">
         <h2 id="c5">5. Heti bónusz szabályai</h2>
-        <p>Minden résztvevő, aki az adott héten teljesítette befizetéseit, <strong>+250 Ft jóváírást</strong> kap a saját <strong>Perselyszámlájára</strong>. A bónuszjóváírásokat a rendszer automatikusan rögzíti a weboldalon.</p>
+        <p>Minden résztvevő, aki az adott héten teljesítette befizetéseit, <strong>+150 Ft jóváírást</strong> kap a saját <strong>Perselyszámlájára</strong>. A bónuszjóváírásokat a rendszer automatikusan rögzíti a weboldalon.</p>
       </section>
 
       <section aria-labelledby="c6">
@@ -262,7 +262,7 @@ border-radius: 8px;
         <ul>
           <li>A program végén, <strong>2026. május 31-én</strong>, a gyűjtés lezárul, és a teljesítést ellenőrizzük.</li>
           <li>Ha <strong>minden résztvevő maradéktalanul teljesítette</strong> a befizetéseket (akár heti, akár havi bontásban), és a csatlakozás legkésőbb novemberben történt, akkor a család közös főnyereményben részesül.</li>
-          <li><strong>Főnyeremény:</strong> a nyaralás alatt <strong>egy fakultatív program, 30.000 Ft értékben</strong>.</li>
+          <li><strong>Főnyeremény:</strong> a nyaralás alatt <strong>egy fakultatív programhoz való hozzájárulás, 25.000 Ft értékben</strong>.</li>
         </ul>
       </section>
 
@@ -273,7 +273,7 @@ border-radius: 8px;
 
       <section aria-labelledby="c8">
         <h2 id="c8">8. Záró rendelkezések</h2>
-        <p>A szabályzat keretet ad a folyamathoz. A szabályzat <strong>a játék kezdetéig, 2025. október 6-ig közösen módosítható</strong>.</p>
+        <p>A szabályzat keretet ad a folyamathoz. A szabályzat <strong>2025. október 04. 23:59-ig közösen módosítható.</strong>.</p>
         <p>A játékban való részvételhez javasoljuk a saját <strong>Mobilalkalmazás</strong> segítségével a saját <strong>Perselyszámlára</strong> beállítani a rendszeres átvezetést:
           <br>– heti <strong>3.850 Ft</strong>, vagy
           <br>– havi <strong>16.500 Ft</strong> a hónap elején vagy végén.
