--- a/rangom.html
+++ b/rangom.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VakációVágyó – Lekérdezés</title>
+  <title>Rangom</title>
   <style>
     :root{
       --bg: #fffbe9;
@@ -16,6 +16,7 @@
     * { box-sizing: border-box; }
     body{
       margin:0;
+      background-color: #fefcc8;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background: var(--bg);
       color: var(--fg);
