--- a/akciok.html
+++ b/akciok.html
@@ -98,6 +98,7 @@ button:focus {
       <a href="eldujra.html">Éld újra</a>
       <a href="akciok.html">Akciók</a>
       <a href="tudnivalok.html">Információk</a>
+      <a href="rangom.html"><i>Rangom</i></a>
     </div>
   </div>
 
@@ -105,10 +106,10 @@ button:focus {
   <main class="container">
     <h1>AKCIÓK</h1>
     <article class="card">
-      <img src="akcio001.jpg" alt="Akció">
+      <img src="akciok01.jpg" alt="Akció">
       <div class="card-body">
         <h3 class="card-title"> Rakj félre egy kis aprót az extra bónuszért!</h3>
-        <p class="card-text"> <b>Ha 2025.09.30.-ig félreraksz legalább 20.000- Ft-ot,  akkor most extra 10.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br> Megj.: Az akció más akciókkal nem összevonható és O.Kristófnak nem jár bónusz. <br><br> <i>Érvényes: 2025. szeptember 30.-ig</i></p>
+        <p class="card-text"> <span style="color: red"><b>VILLÁMAKCIÓ!!!</b><br></span> <b>Ha 2025.09.30.-ig félreraksz legalább 10.000- Ft-ot,  akkor most extra 5.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br> Megj.: Az akció más akciókkal nem összevonható és O.Kristófnak nem jár bónusz. <br><br> <i>Érvényes: 2025. szeptember 30.-ig</i></p>
       </div>
     </article> <br>
      <article class="card">
