--- a/pontgyujtoszabalyzat.html
+++ b/pontgyujtoszabalyzat.html
@@ -51,6 +51,7 @@
       max-width: 900px;
       margin: 2rem auto;
       padding: 1rem;
+      text-align: justify;
     }
 
     h2 {
@@ -180,6 +181,7 @@
   <div class="container">
     <h1>JÁTÉKSZABÁLYZAT</h1>
     <h1>VakációVágyó Pontgyűjtő Rendszer</h1>
+    
     <p>A VakációVágyó weboldal pontgyűjtő rendszere lehetőséget biztosít a felhasználók számára, hogy befizetéseik után pontokat szerezzenek, és ezek alapján különböző rangokat, valamint vásárlási utalványokat érjenek el.</p>
 
     <div style="text-align: center;" class="img1 img2"><img src="ötegypont.jpg" alt="Pontrendszer" height="150px" width="600px"></div>
@@ -239,11 +241,14 @@
     <h2>4. Záró rendelkezések</h2>
     <ul>
       <li>A pontgyűjtés <b>nem függ semelyik</b> meghirdetett akciótól sem.</li>
-      <li>Az utalványok utalása minden ranglépés esetén kizárólag egyszer kerül utalásra így összesen egy felhasználó maximum 9.000 - Ft értékben szerezhet utalványt a ranglépései során.</li>
+      <li>•	A jóváírt bónuszösszegek <b>nem</b> tartoznak a pontggyűjtések közé.</li>
+      <li>Az utalványok utalása minden ranglépés esetén kizárólag egyszer kerül utalásra így összesen egy felhasználó <b>maximum 9.000 - Ft</b> értékben szerezhet utalványt a ranglépései során.</li>
       <li>Ha <b>elírást tapasztalsz a rangodban, vagy esetleg a pontszámodban, </b>akkor jelezd kérlek azt a <b>vakaciovagyo@gmail.com </b>email címen.</li>
       <li><b>A rendszerben való részvétel automatikusan a szabályzat elfogadását jelenti.</b></li>
     </ul>
-  </div>
+<span>------------------ <br><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1qxazOYleoIdahjkA2_JQ95EfCvucG5zi/view?usp=sharing">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
+<br> <b><i>2025. szeptember 22. </i></b> 
+</div>
 
   <div class="centered-image">
      <img class="bottom-img kozep" src="repulomalac.jpg" alt="Repülőmalac"> <br> Röfi, a repülőmalac :)
