--- a/befizetesek.html
+++ b/befizetesek.html
@@ -194,19 +194,16 @@
       <a href="eldujra.html">Éld újra</a>
       <a href="akciok.html">Akciók</a>
       <a href="tudnivalok.html">Információk</a>
+      <a href="rangom.html"><i>Rangom</i></a>
     </div>
   </div>
 
   <div class="kozep">
     <a href="hogyan.html">
   <img src="hogyanjavitott.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
-  <a href="akciok.html">
+  <a href="akciok.html"></a>
   </div>
-    
-  <img src="akcio001h.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
-  </div>
-  <a href="akciok.html"> 
-  <img src="akcio2h.jpg" alt="Útmutató" height="200px" width="1000px"> </a>
+ 
 
   <div class="container">
     <h1>Befizetések</h1>
