--- a/eldujra.html
+++ b/eldujra.html
@@ -184,6 +184,7 @@
       <a href="eldujra.html">Éld újra</a>
       <a href="akciok.html">Akciók</a>
       <a href="tudnivalok.html">Információk</a>
+      <a href="rangom.html"><i>Rangom</i></a>
     </div>
   </div>
 
