--- a/pontgyujtoszabalyzat.html
+++ b/pontgyujtoszabalyzat.html
@@ -114,7 +114,7 @@
     }
 
     /* --- Mobilbarát kiegészítések --- */
-    @media (max-width: 768px) {
+    @media (max-width: 300px) {
       header { padding: 0.8rem 0.75rem; }
       .container {
         margin: 1rem auto;
@@ -241,7 +241,7 @@
     <h2>4. Záró rendelkezések</h2>
     <ul>
       <li>A pontgyűjtés <b>nem függ semelyik</b> meghirdetett akciótól sem.</li>
-      <li>•	A jóváírt bónuszösszegek <b>nem</b> tartoznak a pontggyűjtések közé.</li>
+      <li>A jóváírt bónuszösszegek <b>nem</b> tartoznak a pontggyűjtések közé.</li>
       <li>Az utalványok utalása minden ranglépés esetén kizárólag egyszer kerül utalásra így összesen egy felhasználó <b>maximum 9.000 - Ft</b> értékben szerezhet utalványt a ranglépései során.</li>
       <li>Ha <b>elírást tapasztalsz a rangodban, vagy esetleg a pontszámodban, </b>akkor jelezd kérlek azt a <b>vakaciovagyo@gmail.com </b>email címen.</li>
       <li><b>A rendszerben való részvétel automatikusan a szabályzat elfogadását jelenti.</b></li>
