--- a/sksm.html
+++ b/sksm.html
@@ -208,26 +208,24 @@ border-radius: 8px;
 
   <!-- Bezárás -->
   <a class="close" href="akciok.html" aria-label="Bezárás és vissza az akciok.html oldalra">Bezárás ✕</a>
-
+<div style="text-align: justify;">
   <main class="wrap">
     <article class="card" aria-labelledby="cim">
       <div class="subtitle">Játékszabályzat</div>
       <h1 id="cim">Sok kicsi sokra megy</h1>
 
       <section aria-labelledby="c1">
-        <h4>Az oldal alján tudsz jelentkezni a játékra! <br><br> CSATLAKOZZ BÁTRAN <br><span style="font-size: 25px;">2025.10.04. 23:59-ig</span>.</h4>
+        <h4>Az oldal alján tudsz jelentkezni a játékra! <br><br> CSATLAKOZZ BÁTRAN <br><span style="font-size: 25px;">2025.10.03. (péntek) 23:59-ig</span>.</h4>
         <h2 id="c1">1. A játék célja</h2>
-        <p>A <em>Sok kicsi sokra megy</em> program célja, hogy a család közösen, játékos és motiváló módon gyűjtse össze a nyaraláshoz szükséges összeget. A játék során minden résztvevő napi, heti és végső vállalásokat teljesít, amelyekhez bónuszjóváírás és közös fődíj kapcsolódik. <br> A játék időtartama: <br><strong>2025. október 6. – 2026. május 31.</strong></p>
+        <p>A <em>Sok kicsi sokra megy</em> program célja, hogy a család közösen, játékos és motiváló módon gyűjtse össze a nyaraláshoz szükséges összeget. A játék során minden résztvevő napi, heti és végső vállalásokat teljesít, amelyekhez bónuszjóváírás és közös fődíj kapcsolódik. <br> A játék időtartama: <br><strong>2025. október 01. – 2026. június 05.</strong></p>
       </section>
 
       <section aria-labelledby="c2">
         <h2 id="c2">2. Résztvevők</h2>
         <ul>
           <li>A játékban összesen <strong>3 fő</strong> vesz részt.</li>
-          <li>Mindhárom fő vállalja a napi befizetést.</li>
-          <li>A játékba <strong>bármikor lehet csatlakozni</strong>.</li>
-          <li>A főnyereményre való jogosultság <strong>csak akkor marad érvényben, ha minden résztvevő legkésőbb novemberben csatlakozik</strong>.</li>
-          <li>Ha valaki <strong>decemberben vagy később</strong> csatlakozik, a főnyeremény <strong>elévül</strong>, és <strong>nem kerül kiosztásra</strong>.</li>
+          <li>Mindhárom fő vállalja a napi, heti vagy havi befizetéseket.</li>
+          <li>Ha valaki <strong> a játék közben kilép vagy nem csatlakozik a játékhoz</strong> akkor főnyeremény <strong>elévül</strong>, és <strong>nem kerül kiosztásra</strong>.</li>
         </ul>
       </section>
 
@@ -236,19 +234,19 @@ border-radius: 8px;
         <ul>
           <li>A játékban való részvételhez <strong>jelentkezni kell egy megadott űrlap kitöltésével</strong>.</li>
           <li>A jelentkezéssel minden résztvevő elfogadja a jelen játékszabályzatot.</li>
-          <li>A játékból való <strong>visszalépésre csak a játék indulásától számított négy hónap elteltével van lehetőség az ötödik hónap 05.-ig napjáig.</strong> Tehát 2026. február utolsó napjától 2026. március 05.-ig van lehetőség visszalépésre.</li>
-          <li>A visszalépéshez a résztvevőnek a hivatalos <strong>Visszalépési Űrlapot</strong>  kell kitölteni, amely a szabályok értelmében <strong>kizárólag csak a megadott időszakban érhető el a weboldalon a játékszabályzatban a lap alján.</strong> </li>
+          <li><strong>A játékból való visszalépésre a játék indulásától számított öt hónap elteltével van lehetőség.</strong></li>
+          <li>A visszalépéshez a résztvevőnek a hivatalos <strong>Visszalépési Űrlapot</strong>  kell kitölteni, amely a szabályok értelmében <strong> az ötödik hónaptól érhető el a weboldalon a játékszabályzatban a lap alján.</strong> </li>
         </ul>
       </section>
 
       <section aria-labelledby="c4">
         <h2 id="c4">4. Befizetés szabályai</h2>
         <ul>
-          <li>Minden résztvevő <strong>naponta 550 Ft-ot</strong> gyűjt a saját <strong>Perselyszámláján</strong>.</li>
-          <li>Ez heti bontásban <strong>3.850 Ft</strong>, havi bontásban <strong>16.500 Ft</strong>.</li>
-          <li>A befizetéseket lehet teljesíteni <strong>heti rendszerességgel (3.850 Ft)</strong> vagy egy összegben <strong>a hónap elején vagy végén (16.500 Ft)</strong>.</li>
-          <li>A befizetések rögzítése egy erre kialakított <strong>weboldalon</strong> történik, amelyet <strong>a következő hónap 05. napjáig</strong> kell vezetni és lezárni.</li>
-          <li><strong>Kihagyott nap vagy hét esetében a befizetések a következő hónapban pótolhatóak.</strong></li>
+          <li>Minden résztvevő <strong>naponta 535 Ft-ot</strong> gyűjt a saját <strong>Perselyszámláján</strong>.</li>
+          <li>Ez heti bontásban <strong>3.750 Ft</strong>, havi bontásban <strong>15.000 Ft</strong>.</li>
+          <li>A befizetéseket lehet teljesíteni <strong>heti rendszerességgel (3.750 Ft)</strong> vagy egy összegben <strong>a hónap elején (15.000 Ft)</strong>.</li>
+          <li>A befizetések rögzítése ezen a <strong>weboldalon</strong> történik, amelyet <strong>a következő hónap 05. napjáig</strong> kell vezetni és lezárni.</li>
+          <li><strong>Kihagyott nap, hét vagy hónap esetében a befizetések a következő hónapban pótolhatóak.</strong></li>
         </ul>
       </section>
 
@@ -260,24 +258,31 @@ border-radius: 8px;
       <section aria-labelledby="c6">
         <h2 id="c6">6. Főnyeremény szabályai</h2>
         <ul>
-          <li>A program végén, <strong>2026. május 31-én</strong>, a gyűjtés lezárul, és a teljesítést ellenőrizzük.</li>
-          <li>Ha <strong>minden résztvevő maradéktalanul teljesítette</strong> a befizetéseket (akár heti, akár havi bontásban), és a csatlakozás legkésőbb novemberben történt, akkor a család közös főnyereményben részesül.</li>
-          <li><strong>Főnyeremény:</strong> a nyaralás alatt <strong>egy fakultatív programhoz való hozzájárulás, 25.000 Ft értékben</strong>.</li>
+          <li>A program végén <strong>2026. június 05-én</strong> a gyűjtés lezárul, és a teljesítést ellenőrizzük.</li>
+          <li>Ha <strong>minden résztvevő maradéktalanul teljesítette a befizetéseket és nem lépett ki senki a játék közben</strong>, akkor a család közös főnyereményben részesül.</li>
+          <li><strong>Főnyeremény:</strong> A nyaralás alatt <strong>egy fakultatív programhoz való hozzájárulás 30.000 Ft értékben</strong>.</li>
         </ul>
       </section>
 
       <section aria-labelledby="c7">
         <h2 id="c7">7. Ellenőrzés és átláthatóság</h2>
-        <p>A Perselyszámlák állását és a befizetések rögzítését <strong>havi szinten</strong> ellenőrizzük és vezetjük. A heti bónuszok jóváírása is <strong>havi szinten, a következő hónap 05. napjáig</strong> kerül összesítésre a weboldalon. A szabályok betartása minden résztvevő közös felelőssége.</p>
+        <p>A Perselyszámlák állását és a befizetések rögzítését <strong>havi szinten</strong> ellenőrizzük és vezetjük. A heti bónuszok jóváírása is <strong>havi szinten a következő hónap 05. napjáig</strong> kerül összesítésre a weboldalon. A szabályok betartása minden résztvevő közös felelőssége.</p>
       </section>
 
       <section aria-labelledby="c8">
         <h2 id="c8">8. Záró rendelkezések</h2>
-        <p>A szabályzat keretet ad a folyamathoz. A szabályzat <strong>2025. október 04. 23:59-ig közösen módosítható.</strong>.</p>
+        <p>A szabályzat keretet ad a folyamathoz. A szabályzat <strong>2025. október 03. (péntek) 23:59-ig közösen módosítható.</strong>.</p>
         <p>A játékban való részvételhez javasoljuk a saját <strong>Mobilalkalmazás</strong> segítségével a saját <strong>Perselyszámlára</strong> beállítani a rendszeres átvezetést:
-          <br>– heti <strong>3.850 Ft</strong>, vagy
-          <br>– havi <strong>16.500 Ft</strong> a hónap elején vagy végén.
-        </p>
+          <br>– heti <strong>3.750 Ft</strong>, vagy
+          <br>– havi <strong>15.000 Ft</strong> a hónap elején.
+          <br>- Júniusban <strong>csak havi befizetésre van lehetőség </strong>a hónap 05. napjáig.
+        <p>A havi ellenőrzéseket megtakarítási tranzakciókról szóló bizonylatot <strong>minden hónap 05.-ig napjáig kérjük be emailben.</strong></p>
+       
+      </p>
+
+        <span>------------------ <br><b><i>A játékszabályzatot <a href="">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
+<br> <b><i>2025. szeptember 28. </i></b> 
+
       </section>
 
       <!-- Alsó CTA + kép -->
@@ -291,6 +296,7 @@ border-radius: 8px;
       </div>
     </article>
   </main>
+  </div>
   <!---
 <section id="teljesitesi-naplo" class="naplo">
   <details class="naplo-acc">
