--- a/sksm.html
+++ b/sksm.html
@@ -280,7 +280,7 @@ border-radius: 8px;
        
       </p>
 
-        <span>------------------ <br><b><i>A játékszabályzatot <a href="">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
+        <span>------------------ <br><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1APgvdNbKDE1CzH3UoMfHfL8mVNE1uq5V/view?usp=sharing">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
 <br> <b><i>2025. szeptember 28. </i></b> 
 
       </section>
