--- a/pontgyujtoszabalyzat.html
+++ b/pontgyujtoszabalyzat.html
@@ -45,9 +45,9 @@
     }
   }
 
-  @media (max-width: 400px) {
+  @media (max-width: 200px) {
     table {
-      font-size: 0.75rem;          /* még kisebb betű mobilon */
+      font-size: 0.4rem;          /* még kisebb betű mobilon */
     }
     table th, table td {
       padding: 5px 6px;
@@ -250,7 +250,7 @@
       <tr>
         <th>Rang</th>
         <th>Ponttartomány</th>
-        <th>Vásárlási utalvány értéke</th>
+        <th>Vásárlási <br>utalvány értéke</th>
       </tr>
       <tr>
         <td>Hátizsákos utazó</td>
