--- a/pontgyujtoszabalyzat.html
+++ b/pontgyujtoszabalyzat.html
@@ -249,8 +249,8 @@
     <table>
       <tr>
         <th>Rang</th>
-        <th>Ponttartomány</th>
-        <th>Vásárlási <br>utalvány értéke</th>
+        <th>Ponthatár</th>
+        <th>Vásárlási <br> utalvány</th>
       </tr>
       <tr>
         <td>Hátizsákos utazó</td>
