--- a/sksm.html
+++ b/sksm.html
@@ -260,7 +260,7 @@ border-radius: 8px;
         <ul>
           <li>A program végén <strong>2026. június 05-én</strong> a gyűjtés lezárul, és a teljesítést ellenőrizzük.</li>
           <li>Ha <strong>minden résztvevő maradéktalanul teljesítette a befizetéseket és nem lépett ki senki a játék közben</strong>, akkor a család közös főnyereményben részesül.</li>
-          <li><strong>Főnyeremény:</strong> A nyaralás alatt <strong>egy fakultatív programhoz való hozzájárulás 30.000 Ft értékben</strong>.</li>
+          <li><strong>Főnyeremény:</strong> A nyaralás alatt <strong>egy fakultatív programhoz való hozzájárulás 25.000 Ft értékben.</strong>.</li>
         </ul>
       </section>
 
@@ -280,7 +280,7 @@ border-radius: 8px;
        
       </p>
 
-        <span>------------------ <br><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1APgvdNbKDE1CzH3UoMfHfL8mVNE1uq5V/view?usp=sharing">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
+        <span>------------------ <br><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1gDa1Cw4x2o6IfNZhg1j1qJ8aQ_rr761-/view?usp=sharing">ide kattintva</a> is eléred PDF formátumban!</i></b></span>
 <br> <b><i>2025. szeptember 28. </i></b> 
 
       </section>
